[package]
name = "saveshare-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version="0.8.1", features = ["v4"] }

serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"

colored = "1.0"

rusqlite = { version = "0.31.0", features = ["bundled"] }
